# dinoc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/dino/: main.cpp
src/dino/cli/: compile.cpp  compile.hpp  compile_options.hpp  link.cpp  link.hpp  link_options.hpp  linker.cpp  linker.hpp  parser.cpp  parser.hpp
src/dino/codegen/: backend.cpp  backend.hpp
src/dino/codegen_att1/: codegen.hpp  found_struct_declaration_in_any_tu.cpp  generate.cpp
src/dino/codegen_vibecode/: decl_codegen.cpp  decl_codegen.hpp  expr_codegen.cpp  expr_codegen.hpp  generator.cpp  generator.hpp  llvm_helper.hpp  stmt_codegen.cpp  stmt_codegen.hpp  type_converter.cpp  type_converter.hpp
src/dino/frontend/: ast.cpp  ast.hpp  driver.cpp  driver.hpp  dump.cpp  dump.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp  target.cpp  target.hpp  token.cpp  token.hpp
src/dino/lexer/: lexer.hpp  lexer_debug_utils.inl
